// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The PlanItem component renders active on the page with no errors 1`] = `
<PlanItem
  active={true}
  title="Test Title"
>
  <WithStyles(WithStyles(ForwardRef(Typography)))
    align="center"
    variant="subtitle2"
  >
    <WithStyles(ForwardRef(Typography))
      align="center"
      classes={
        Object {
          "root": "WithStyles(ForwardRef(Typography))-root-1",
        }
      }
      variant="subtitle2"
    >
      <ForwardRef(Typography)
        align="center"
        classes={
          Object {
            "alignCenter": "MuiTypography-alignCenter",
            "alignJustify": "MuiTypography-alignJustify",
            "alignLeft": "MuiTypography-alignLeft",
            "alignRight": "MuiTypography-alignRight",
            "body1": "MuiTypography-body1",
            "body2": "MuiTypography-body2",
            "button": "MuiTypography-button",
            "caption": "MuiTypography-caption",
            "colorError": "MuiTypography-colorError",
            "colorInherit": "MuiTypography-colorInherit",
            "colorPrimary": "MuiTypography-colorPrimary",
            "colorSecondary": "MuiTypography-colorSecondary",
            "colorTextPrimary": "MuiTypography-colorTextPrimary",
            "colorTextSecondary": "MuiTypography-colorTextSecondary",
            "displayBlock": "MuiTypography-displayBlock",
            "displayInline": "MuiTypography-displayInline",
            "gutterBottom": "MuiTypography-gutterBottom",
            "h1": "MuiTypography-h1",
            "h2": "MuiTypography-h2",
            "h3": "MuiTypography-h3",
            "h4": "MuiTypography-h4",
            "h5": "MuiTypography-h5",
            "h6": "MuiTypography-h6",
            "noWrap": "MuiTypography-noWrap",
            "overline": "MuiTypography-overline",
            "paragraph": "MuiTypography-paragraph",
            "root": "MuiTypography-root WithStyles(ForwardRef(Typography))-root-1",
            "srOnly": "MuiTypography-srOnly",
            "subtitle1": "MuiTypography-subtitle1",
            "subtitle2": "MuiTypography-subtitle2",
          }
        }
        variant="subtitle2"
      >
        <h6
          className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-1 MuiTypography-subtitle2 MuiTypography-alignCenter"
        >
          <FormattedMessage
            defaultMessage="Your plan"
            id="app.plan_item.your_plan"
            values={Object {}}
          >
            Your plan
          </FormattedMessage>
        </h6>
      </ForwardRef(Typography)>
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(WithStyles(ForwardRef(Typography)))>
  <Styled(MuiBox)
    border={1}
    borderColor="grey.300"
    borderRadius="borderRadius"
    boxShadow={2}
    p={2}
  >
    <div
      className="MuiBox-root MuiBox-root-33"
    >
      <WithStyles(ForwardRef(Typography))
        align="center"
        variant="h4"
      >
        <ForwardRef(Typography)
          align="center"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          variant="h4"
        >
          <h4
            className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter"
          >
            Test Title
          </h4>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
      <div />
    </div>
  </Styled(MuiBox)>
</PlanItem>
`;

exports[`The PlanItem component renders inactive on the page with no errors 1`] = `
<PlanItem
  active={false}
  title="Test Title"
>
  <Styled(MuiBox)
    border={1}
    borderColor="grey.300"
    borderRadius="borderRadius"
    boxShadow={2}
    p={2}
  >
    <div
      className="MuiBox-root MuiBox-root-34"
    >
      <WithStyles(ForwardRef(Typography))
        align="center"
        variant="h4"
      >
        <ForwardRef(Typography)
          align="center"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          variant="h4"
        >
          <h4
            className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter"
          >
            Test Title
          </h4>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
      <div />
    </div>
  </Styled(MuiBox)>
</PlanItem>
`;
